--- a/static/styles.css
+++ b/static/styles.css
@@ -1,18 +1,32 @@
 body {
     display: flex;
+    flex-direction: column;
     height: 100vh;
     margin: 0;
 }
 
-.container {
+header {
+    width: 100%;
+    background-color: #f8f8f8;
+    padding: 10px 0;
+    text-align: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.main-container {
+    display: flex;
     flex: 1;
+}
+
+.left-container {
     display: flex;
     flex-direction: column;
+    flex: 1;
     overflow: hidden;
 }
 
 #dropzone {
-    flex: 1;
+    flex: 0 0 50%;
     border: 2px dashed #ccc;
     border-radius: 15px;
     display: flex;
@@ -20,7 +34,16 @@ body {
     justify-content: center;
     margin: 10px;
     transition: border-color 0.3s;
-    height: 50%;
+    position: relative;
+    cursor: pointer;
+}
+
+#dropzone input {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    cursor: pointer;
 }
 
 #image-gallery {
@@ -45,8 +68,6 @@ body {
     flex: 1;
     margin: 10px;
     border: none;
-    width: 100%;
-    height: 100%;
 }
 
 #fullscreen-view {
